src/test/ui/generator/generator-region-requirements.stderr
error[E0759]: `x` has an anonymous lifetime `'_` but it needs to satisfy a `'static` lifetime requirement
  --> $DIR/generator-region-requirements.rs:8:9
   |
LL | fn dangle(x: &mut i32) -> &'static mut i32 {
   |              -------- this data with an anonymous lifetime `'_`...
...
LL |         x
   |         ^ ...is captured here...
...
LL |             GeneratorState::Complete(c) => return c,
   |                                                   - ...and is required to live as long as `'static` here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0759`.
